.metadata/.plugins/org.eclipse.cdt.ui/Clase 03.build.log
21:27:16 **** Incremental Build of configuration Debug for project Clase 03 ****
make all 
Building file: ../src/Clase 03.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Clase 03.d" -MT"src/Clase 03.o" -o "src/Clase 03.o" "../src/Clase 03.c"
../src/Clase 03.c: In function ‘sumarEnteros’:
../src/Clase 03.c:16:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   16 | int main(void) {
      |                ^
../src/Clase 03.c:47:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   47 | {
      | ^
../src/Clase 03.c:54:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   54 | {
      | ^
../src/Clase 03.c:61:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   61 | {
      | ^
../src/Clase 03.c:71:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   71 | {
      | ^
../src/Clase 03.c:89: error: expected ‘{’ at end of input
   89 | 
      | 
../src/Clase 03.c:89: warning: control reaches end of non-void function [-Wreturn-type]
   89 | 
      | 
make: *** [src/subdir.mk:20: src/Clase 03.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

21:27:17 Build Failed. 7 errors, 1 warnings. (took 1s.64ms)

